--- a/styles/title.css
+++ b/styles/title.css
@@ -81,7 +81,7 @@
 .moto{
     color: #10B981;
 }
-.features-section h2,.news-section h2{
+.features-section h2,.news-section h2,.companies-section h2{
     font-size: 36px;
 }
 
@@ -154,4 +154,33 @@
 .news-card-description{
     font-size: 15px;
     line-height: 23px;
+}
+
+
+.companies-cards-section{
+
+     display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 45px;
+    row-gap: 45px;
+    
+    align-items: start;
+    text-align: start;
+     margin: 50px 191px 0 191px;
+}
+
+.companies-card{
+
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+        padding: 32px 32px 32px 32px;
+
+
+}
+
+.companies-card img{
+    width: 160px;
+    height: 40px;
+    object-fit: contain;
 }
