--- a/styles/general.css
+++ b/styles/general.css
@@ -3,6 +3,7 @@ font-family: "Red Hat Display";
    margin: 0;
    word-spacing: 2px;
    line-height: 32px;
+   background-color: var(--main-color);
 }
 
 p{
@@ -12,4 +13,8 @@ p{
 a{
    text-decoration: none;
     color: inherit;
+}
+
+:root{
+   --main-color:white;
 }
