--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,7 +1,7 @@
 nav{
-    margin:0 132px 0 132px ;
-    padding: 2px 0 2px 0;
-    height: 96px;
+    margin:0 191px 0 191px ;
+    padding: 30px 0 24px 0;
+    height: 48px;
     font-family: sans-serif;
     font-size: 16px;
        
@@ -10,6 +10,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--main-color);
 }
 .nav-left,.nav-center,.nav-right{
     flex: 1;
@@ -17,6 +18,7 @@ nav{
 
 .nav-left img{
    height: 48px;
+   
 }
 
 .nav-center{
@@ -25,7 +27,7 @@ nav{
     align-items: center;
 }
 .nav-center button, .nav-center a {
-    background-color: white;
+    background-color: var(--main-color);
     border: none;
     border-radius: 15px;
     text-decoration: none;
@@ -36,14 +38,18 @@ nav{
 .nav-center button, .nav-right button{
     padding-left: 5px;
     padding-right: 5px;
-    font-size: 15px;
+    font-size: 14px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 .nav-center a{
-    padding: 16px 10px;
+    padding: 10px 12px;
+}
+.nav-center button p{
+    padding: 0;
+
 }
 .dropdown:hover button, .nav-center button:hover, .nav-center a:hover{
     background-color:rgb(249,249,250) ;
@@ -53,21 +59,21 @@ nav{
     position: relative;
 }
 
+
 .dropdown-menu{
     position: absolute;
-  
     top: 58px;
     width: 250px;
     display: inline-block;
     align-content: center;
-    background-color: white;
-    padding: 0.75rem;
+    background-color: var(--main-color);
+    padding: 10px;
     border-radius: 0.5rem;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
     opacity: 0;
     pointer-events: none;
     transform: translateY(-10px);
-    transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
+    transition: opacity 0.25s ease-in-out, transform 0.25s ease-in-out;
     white-space: nowrap;
 }
 .dropdown:hover .dropdown-menu{
@@ -79,14 +85,17 @@ nav{
 .dropdown-link{
     text-align: left;
     border-radius: 10px;
-    padding:1px 5px;
+    padding:5px 10px;
     font-size: 14px;
     line-height: 24px;
     
 }
+.dropdown-link p{
+    margin: 0;
+}
 .dropdown-link:hover{
     background-color: rgb(249,249,250);
-    
+    cursor: pointer;
    
 }
 .nav-right{
@@ -98,7 +107,7 @@ nav{
     border: none;
     border-radius: 10px;
     text-decoration: none;
-    color: white;
+    color: var(--main-color);
     margin: 10px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
    
@@ -108,11 +117,11 @@ nav{
 }
 .theme-toggler-button{
     
-    background-color: white;
+    background-color: var(--main-color);
     border: solid grey;
 }
 .theme-toggler-button img{
-    padding: 20px 12px 20px 12px;
+    padding: 18px 12px 18px 12px;
 }
 .theme-toggler-button:hover{
     background-color: rgb(249,249,250);
